# testing-scraper

./: Dockerfile  README.md  autos.json  main.py  pyproject.toml  render.yaml  start.sh
.github/workflows/: scraper.yml
src/kavak_scraper/: main.py  models.py
