[tool.poetry]
name = "kavak-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kavak_scraper", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
pydantic = "^2.11.4"
playwright = "^1.52.0"

[tool.poetry.scripts]
scrap = "kavak_scraper.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
